@@ -47,8 +47,10 @@ AT_CHECK([if m4_default([$3], [false]); then
 
 AT_XFAIL_IF([m4_default([$4], [false])])
 cp $abs_srcdir/$1.stdout expout
-AT_CHECK([$CHECK_PREFIX `which $1`], [0], [expout], [ignore])
-
+TESTCASE=`which $1`
+echo "$at_srcdir/AT_LINE: $CHECK_PREFIX $TESTCASE"
+AT_CHECK([$CHECK_PREFIX $TESTCASE], [0], [expout], [ignore])
+AT_CAPTURE_FILE ([valgrind.log])
 AT_CLEANUP
 ]) # CHECK_STDOUT
 
